--- a/service-api-dev.yml
+++ b/service-api-dev.yml
@@ -10,4 +10,4 @@ eureka:
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 
 
-swagger.name: learn-dev
+swagger.name: learn-dev-new
