--- a/service-api-test.yml
+++ b/service-api-test.yml
@@ -10,4 +10,4 @@ eureka:
     instance-id: ${spring.cloud.client.ip-address}:${server.port}
 
 
-swagger.name: learn-test
+swagger.name: learn-test-new
